Went through and addressed some spacing issues

--- a/css/index.css
+++ b/css/index.css
@@ -253,13 +253,18 @@ footer nav a {
 
 .about-page {
     padding-bottom: 15px;
-    margin-bottom: 15px;
-    border-bottom: 1px dashed black;
     display: flex;
     flex-direction: column;
 }
+
+.about-text {
+    padding: 15px;
+    margin-bottom: 20px;
+    border-bottom: 1px dashed black;
+}
+
 .work {
-    margin: 0 auto;
+    margin: 20 auto;
     width: 800px;
     display: flex;
     flex-wrap: no-wrap;
@@ -308,11 +313,13 @@ footer nav a {
     color: black;
     width: 35%;
     border: 2.5px solid black;
-    margin-bottom: 10px;
+    margin-bottom: 15px;
+    margin-top: 15px;
     font-size: 1.0rem;
-    padding: 6px;
+    padding: 8px;
     border-radius: 5px;
     text-decoration: none;
+    text-align: center;
     font-family: "Rubik", sans-serif;
 }
 
@@ -320,11 +327,13 @@ footer nav a {
     color: black;
     width: 35%;
     border: 2.5px solid black;
-    margin-bottom: 10px;
+    margin-bottom: 15px;
+    margin-top: 15px;
     font-size: 1.0rem;
-    padding: 6px;
+    padding: 8px;
     border-radius: 5px;
     text-decoration: none;
+    text-align: center;
     font-family: "Rubik", sans-serif;
 }
 
@@ -334,9 +343,13 @@ footer nav a {
     display: flex;
     flex-direction: column;
 }
+.work,.bottom-work,img {
+    margin-bottom: 15px;
+}
 
 footer {
     margin: 0 auto;
+    margin-top: 15px;
     width:800px;
     display: flex;
 }
